--- a/src/app/components/tablecomponent/tablecomponent.component.html
+++ b/src/app/components/tablecomponent/tablecomponent.component.html
@@ -7,6 +7,7 @@
  [filterFields]="tableColum"
  (filterDataChange)="filterUpdated($event)"
  (downloadasChange)="handleExportAs($event)"
+ (searchChange)="handleSearch($event)"
  >
 </ngx-tableheader>
 
