--- a/src/app/modules/employeemodule/employeerecords/employeerecords.component.html
+++ b/src/app/modules/employeemodule/employeerecords/employeerecords.component.html
@@ -25,6 +25,7 @@
         [totalItems]="totalItems"
         [currentPage]="currentPage"
         [loading]="loading"
+        [searchabletableColum]="searchabletableColum"
         >
     </ngx-tablecomponent>
 
