--- a/src/app/components/tableheader/tableheader.component.html
+++ b/src/app/components/tableheader/tableheader.component.html
@@ -15,7 +15,7 @@
             <nb-action style="padding: 0px 0.5rem 0px 0.5rem !important;justify-content: flex-start;">
               <nb-form-field style="padding: 5px; min-width: 170px">
                 <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
-                <input type="text" placeholder="Search" nbInput />
+                <input type="text" placeholder="Search" #searchInput nbInput (keyup)="handleSearch(searchInput.value)" />
               </nb-form-field>
             </nb-action>
             <nb-action>
@@ -33,7 +33,7 @@
                 </ng-template>
               </button>
             </nb-action>
-            <nb-action>
+            <!-- <nb-action>
               <span>Sort by</span>&nbsp; &nbsp;
               <button
                 nbButton
@@ -43,7 +43,7 @@
                   icon="arrow-ios-downward-outline"
                 ></nb-icon>
               </button>
-            </nb-action>
+            </nb-action> -->
             <nb-action>
               <ng-template #card>
                 <div class="row">
@@ -62,8 +62,8 @@
                 Export as
               </button>
             </nb-action>
-            <nb-action>
-              <nb-icon
+            <nb-action (click)='downloadas("Print")'>
+              <nb-icon 
                 icon="printer-outline"
                 status="primary"
                 style="font-size: 35px"
