--- a/src/app/modules/career-succession/new-competency/new-competency.component.html
+++ b/src/app/modules/career-succession/new-competency/new-competency.component.html
@@ -188,7 +188,7 @@
                   <div class="col-sm-3"></div>
                   <div class="col-sm-8">
                     <span class="cbadge"  *ngFor="let requirement of allCompetencyRequirements" style="margin: 5px;">{{ requirement.requirementCategory }} &nbsp;
-                      <i class="fa fa-times" (click)="removeRequirement()" style="cursor: pointer;color: red;"></i></span>
+                      <i class="fa fa-times" (click)="removeRequirement(requiremnt)" style="cursor: pointer;color: red;"></i></span>
                   </div>
                 </div>
 
