--- a/src/app/modules/career-succession/competency/competency.component.html
+++ b/src/app/modules/career-succession/competency/competency.component.html
@@ -202,8 +202,12 @@
           </div>
 
           <div class="form-group row" style="border: #4847E0 3px;">
-              <span class="cbadge"  *ngFor="let requirement of allCompetencyRequirements" style="margin: 5px;">{{ requirement.requirementCategory }}  &nbsp;
-                <i class="fa fa-times" (click)="removeRequirement(requiremnt)" style="cursor: pointer;color: red;"></i></span>
+            <span class="cbadge"  *ngFor="let requirement of allCompetencyRequirements;let i = index" style="margin: 5px;">{{ requirement.requirementCategory }}
+              |
+        {{requirement.skillName}} {{requirement.certificationName}} {{requirement.qualificationName}}  | {{requirement.yearsofExperience}} |
+        {{requirement.skillWeight}}
+              &nbsp;
+              <i class="fa fa-times" (click)="removeRequirement(requirement,i)" style="cursor: pointer;color: red;"></i></span>
           </div>
 
           <div class="form-group row">
