--- a/src/app/modules/recruitment/applicantssignin/applicantssignin.component.html
+++ b/src/app/modules/recruitment/applicantssignin/applicantssignin.component.html
@@ -46,7 +46,7 @@
                 <div style="padding: 5px;"></div>
                 <p style="text-align: center;font-size: .9rem;color: #080730;font-weight: 600;"><a routerLink="/recruitment/signup" style="font-weight: 700;">Sign up instead</a></p>
                 <div style="padding: 5px;"></div>
-                <p style="text-align: center;font-size: .9rem;color: #080730;font-weight: 600;">Forgot Password? <a routerLink="/recruitment/applicantssignin" style="font-weight: 700;">Reset</a></p>
+                <p style="text-align: center;font-size: .9rem;color: #080730;font-weight: 600;">Forgot Password? <a routerLink="/recruitment/signin" style="font-weight: 700;">Reset</a></p>
               </div>
               </div>
           </div>
