--- a/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
+++ b/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
@@ -151,7 +151,7 @@ pageDescription="No record found"  [loading]="loading"></ngx-default-content>
 
 
 
-                <div class="form-group row">
+                <div class="form-group ">
                     <label for="inputEmail1" class="label  col-form-label listsubheader">Benefit
                         Type</label>
                     <div class="">
@@ -214,6 +214,8 @@ pageDescription="No record found"  [loading]="loading"></ngx-default-content>
 
     </div>
 </ngx-side-modal>
+
+
 <!-- vendor for plan -->
 <ngx-side-modal [(show)]='showPlan' style="width: 500px;">
     <div modal-header style="font-size: larger; font-weight: bold;">
