--- a/src/app/modules/benefit/pages/allplans/allplans.component.html
+++ b/src/app/modules/benefit/pages/allplans/allplans.component.html
@@ -42,7 +42,7 @@
 
 
 
-                <div class="form-group ">
+                <!-- <div class="form-group ">
                     <label for="inputEmail1" class="label  col-form-label listsubheader">Benefit
                         Type</label>
                     <div class="">
@@ -50,14 +50,14 @@
                             #benefitTypeId="ngModel" [(ngModel)]="AddVendorPlan.benefitTypeId">
                             <option value="">--Select Benefit Type---</option>
                             <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option>
-                        </select>
+                        </select>hdhybdtgdhyy
 
                         <div *ngIf="benefitTypeId.invalid && (benefitTypeId.dirty || benefitTypeId.touched)"
                             class="error">
                             <div *ngIf="benefitTypeId.errors.required">benefitType is required</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="form-group">
                     <label for="Description"> Plan Description</label>
