--- a/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
+++ b/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
@@ -166,7 +166,7 @@ pageDescription="No record found"  [loading]="loading"></ngx-default-content>
                             <div *ngIf="benefitTypeId.errors.required">benefitType is required</div>
                         </div> 
                     </div>
-                </div>
+                </div> 
                 <div class="form-group">
                     <label for="Description">Description</label>
                     <textarea type="textarea" class="form-control" placeholder="Enter Description" id="description"
@@ -240,7 +240,7 @@ pageDescription="No record found"  [loading]="loading"></ngx-default-content>
 
 
                 
-                <div class="form-group ">
+                <!-- <div class="form-group ">
                     <label for="inputEmail1" class="label  col-form-label listsubheader">Benefit
                         Type</label>
                     <div class="">
@@ -255,7 +255,7 @@ pageDescription="No record found"  [loading]="loading"></ngx-default-content>
                             <div *ngIf="benefitTypeId.errors.required">benefitType is required</div>
                         </div> 
                     </div>
-                </div>
+                </div> -->
 
                 
                 <div class="form-group ">
