--- a/src/app/modules/applicant-module/applicant-module.component.html
+++ b/src/app/modules/applicant-module/applicant-module.component.html
@@ -36,6 +36,13 @@
           <nb-checkbox>Finannce</nb-checkbox><br>
         </div>
 
+        <div class="form-group">
+          <h6>Salary</h6>
+          <nb-checkbox>Less than 100k</nb-checkbox><br>
+          <nb-checkbox>100k - 300k</nb-checkbox><br>
+          <nb-checkbox>300k - 500k</nb-checkbox><br>
+          <nb-checkbox>More than 500k</nb-checkbox><br>
+        </div>
     </div>
   </div>
   <router-outlet></router-outlet>
