--- a/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
+++ b/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
@@ -152,7 +152,48 @@
           </form>
         </div>
       </div>
+
       <div style="padding-bottom: 20px;">
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+          <div *ngFor="let job of allJobs" class="job-items">
+            <div class="title">{{ job.jobTitle }}</div>
+            <div class="sub-title">{{ job.location }}</div>
+            <div style="padding: 10px;"></div>
+            <div class="job-descrition"><p>{{ job.description }}</p>
+            </div>
+            <div>
+              <button class="btn" routerLink="[/jobdetails]" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
+            </div>
+          </div>
+
+          <div class="job-items">
+              <div class="title">Support Officer</div>
+              <div class="sub-title">Lagos, Nigeria</div>
+              <div style="padding: 10px;"></div>
+              <div class="job-descrition"><p>As a freelance designer, you'll instantly join a thriving community of
+                experts in over 120 countries. Work remotely on projects that meet your career ambitions</p>
+              </div>
+              <div>
+                <button class="btn" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
+              </div>
+            </div>
+
+            <div class="job-items">
+              <div class="title">Support Officer</div>
+              <div class="sub-title">Lagos, Nigeria</div>
+              <div style="padding: 10px;"></div>
+              <div class="job-descrition"><p>As a freelance designer, you'll instantly join a thriving community of
+                experts in over 120 countries. Work remotely on projects that meet your career ambitions</p>
+              </div>
+              <div>
+                <button class="btn" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
+              </div>
+            </div>
+
+        </div>
+      </div>
+
+      <!-- <div style="padding-bottom: 20px;">
         <div style="display: flex; justify-content: space-between; align-items: center;">
           <div class="job-items">
             <div class="title">Support Officer</div>
@@ -232,48 +273,7 @@
             </div>
 
         </div>
-      </div>
-
-      <div style="padding-bottom: 20px;">
-        <div style="display: flex; justify-content: space-between; align-items: center;">
-          <div class="job-items">
-            <div class="title">Support Officer</div>
-            <div class="sub-title">Lagos, Nigeria</div>
-            <div style="padding: 10px;"></div>
-            <div class="job-descrition"><p>As a freelance designer, you'll instantly join a thriving community of
-              experts in over 120 countries. Work remotely on projects that meet your career ambitions</p>
-            </div>
-            <div>
-              <button class="btn" routerLink="[/jobdetails]" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
-            </div>
-          </div>
-
-          <div class="job-items">
-              <div class="title">Support Officer</div>
-              <div class="sub-title">Lagos, Nigeria</div>
-              <div style="padding: 10px;"></div>
-              <div class="job-descrition"><p>As a freelance designer, you'll instantly join a thriving community of
-                experts in over 120 countries. Work remotely on projects that meet your career ambitions</p>
-              </div>
-              <div>
-                <button class="btn" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
-              </div>
-            </div>
-
-            <div class="job-items">
-              <div class="title">Support Officer</div>
-              <div class="sub-title">Lagos, Nigeria</div>
-              <div style="padding: 10px;"></div>
-              <div class="job-descrition"><p>As a freelance designer, you'll instantly join a thriving community of
-                experts in over 120 countries. Work remotely on projects that meet your career ambitions</p>
-              </div>
-              <div>
-                <button class="btn" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
-              </div>
-            </div>
-
-        </div>
-      </div>
+      </div> -->
 
 
     </div>
