--- a/src/app/modules/benefit/add-benefit/add-benefit.component.html
+++ b/src/app/modules/benefit/add-benefit/add-benefit.component.html
@@ -184,7 +184,7 @@
                     <label> Employee Positions</label>
                     <select placeholder="Select Gender" class="form-control" name="positionId" id="positionId"
                         #positionId="ngModel" [(ngModel)]=" benefit.positionId">
-                        <option value="">--Select Vendor---</option>
+                        <option value="">--Select Employee Position---</option>
                         <option *ngFor="let v of  Position" [value]="v.id">{{v.title}}</option>
                     </select>
 
