--- a/src/app/modules/benefit/pages/create-benefit/create-benefit.component.html
+++ b/src/app/modules/benefit/pages/create-benefit/create-benefit.component.html
@@ -107,9 +107,9 @@
             <span>{{plan?.refNumber}}</span>
           </p>
         </div>
-  
+        <!-- javascript:void(0) -->
         <div class="col-sm-1">
-          <span><a href="">view details</a>
+          <span><a href="#"  [routerLink]="['/benefits/plandetails',plan.id]">view details</a>
            </span>
           
         </div>
