--- a/src/app/modules/benefit/eligibilityview/eligibilityview.component.html
+++ b/src/app/modules/benefit/eligibilityview/eligibilityview.component.html
@@ -3,8 +3,8 @@
 <!-- [requiredButton]="rButton"
 (buttonClick)="topActionClicked()"  -->
 
-<ngx-default-content *ngIf="!showEmpty" pageHeader="Vendors"
-pageDescription="No record found"  [loading]="loading"></ngx-default-content>
+<ngx-default-content *ngIf="!showEmpty" pageHeader="Vendors" pageDescription="No record found" [loading]="loading">
+</ngx-default-content>
 <div>
 
 </div>
@@ -138,30 +138,42 @@ pageDescription="No record found"  [loading]="loading"></ngx-default-content>
                         </div>
                     </div>
 
-                    
-            <div class="form-group">
-                <label for="Description">Description</label>
-                <textarea type="textarea" class="form-control" placeholder="Enter Description" id="description"
-                   ></textarea>
-<!--   
-                <div *ngIf="description.invalid && (description.dirty || description.touched)" class="error">
-                    <div *ngIf="description.errors.required">Description is required</div>
-                </div> -->
-  
-            </div>
-                    <!-- <div class="form-group">
-                         name="description" #description="ngModel" [(ngModel)]="eligibility.description"
-                        <label>Employee</label>
-                        <ngx-employee-master-search (masterSubmitted)="employeesSelected($event)"
-                            [allowmultipleselection]="true">
-                        </ngx-employee-master-search>
-
-                        <div class="col-sm-6">
-                            <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event,'employee')"
-                                [allowmultipleselection]="true" [selectionHeader]="selectionHeader"
-                                [addbtnText]="addbtnText"></ngx-employee-master-search>
+                    <!-- <div class="form-group ">
+                        <label for="inputEmail1" class="label  col-form-label listsubheader">Benefit
+                          Type</label>
+                        <div class="">
+                          <select placeholder="Select Benefit Type" class="form-control" name="benefitTypeId" id="benefitTypeId"
+                            #benefitTypeId="ngModel" [(ngModel)]="eligibility.benefitTypeId">
+                            <option value="">--Select Benefit Type---</option>
+                            <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option>
+                          </select>
+                
+                          <div *ngIf="benefitTypeId.invalid && (benefitTypeId.dirty || benefitTypeId.touched)" class="error">
+                            <div *ngIf="benefitTypeId.errors.required">benefitType is required</div>
+                          </div>
                         </div>
+                      </div>
+                 -->
+                    <!-- <div class="form-group">
+                     <label for="Description">Description</label>
+                    <textarea type="textarea" class="form-control" placeholder="Enter Description" id="description"
+                     name="description" #description="ngModel" [(ngModel)]="Eli.description"></textarea>
+                    <div *ngIf="description.invalid && (description.dirty || description.touched)" class="error">
+                    <div *ngIf="description.errors.required">Description is required</div>
+                     </div> 
+  
                     </div> -->
+                    <div class="form-group">
+
+                        <label>Employee</label>
+                        <!-- <ngx-employee-master-search (masterSubmitted)="employeesSelected($event)"
+                            [allowmultipleselection]="true">
+                        </ngx-employee-master-search> -->
+                        <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event,'employee')"
+                        [allowmultipleselection]="true" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText">
+                      </ngx-employee-master-search>
+                
+                    </div> 
 
 
 
@@ -171,19 +183,19 @@ pageDescription="No record found"  [loading]="loading"></ngx-default-content>
 
             </div>
 
-
+<!-- 
             <div modal-actions class="d-flex" style="margin-top: 2px; margin-bottom: 3px;">
                 <button *ngIf="submitbtnPressed" nbButton status="primary" class="d-flex column"><i
                         class="fa fa-spin fa-spinner"></i>&nbsp;Processing ...</button>
                 <button *ngIf="!submitbtnPressed" nbButton status="primary" class="d-flex column"
                     [disabled]="!disability" (click)="Submit()">Submit</button>
 
-                    
-                    <div style="padding-left: 15px;">
-                        <button nbButton outline status="primary" (click)="showModal = false" class="d-flex column"
-                            style="background-color: white;">Discard</button>
-                    </div>
-            </div>
+
+                <div style="padding-left: 15px;">
+                    <button nbButton outline status="primary" (click)="showModal = false" class="d-flex column"
+                        style="background-color: white;">Discard</button>
+                </div>
+            </div> -->
 
         </ngx-side-modal>
     </div>
