--- a/src/app/modules/benefit/pages/employee-view/employee-view.component.html
+++ b/src/app/modules/benefit/pages/employee-view/employee-view.component.html
@@ -1,4 +1,5 @@
-<ngx-componentsheader pageName="Employee View" [requiredButton]="rButton" (buttonClick)="topActionClicked()">
+<ngx-componentsheader pageName="Employee View" [requiredButton]="topActionButtons"
+  (buttonClick)="topActionClicked($event)">
 </ngx-componentsheader>
 
 <div class="row">
@@ -90,7 +91,7 @@
           <span>Address</span>
           <span>Last Name</span>
         </div> -->
-      </div> 
+      </div>
 
       <div class="key-value-group">
         <h4>Employment</h4>
@@ -167,11 +168,11 @@
           (buttonClick)="showDeploymentApplicationModal = true" buttonValue="Apply for Deployment">
 
         </ngx-default-content>
-          <ngx-tablecomponent *ngIf="!showEmpty" [tableColum]="columns" [userData]="allBenefito" [loading]="loading"
-            (pageChange)="loadNewPage($event)" [loading]="loading" [totalItems]="totalItems" [loading]="loading"
-            [currentPage]="currentPage" [actions]="tableActions" (actionClick)="tableActionClicked($event)">
-          </ngx-tablecomponent>
-<!--         
+        <ngx-tablecomponent *ngIf="!showEmpty" [tableColum]="columns" [userData]="allBenefito" [loading]="loading"
+          (pageChange)="loadNewPage($event)" [loading]="loading" [totalItems]="totalItems" [loading]="loading"
+          [currentPage]="currentPage" [actions]="tableActions" (actionClick)="tableActionClicked($event)">
+        </ngx-tablecomponent>
+        <!--         
         <ngx-tablecomponent *ngIf="!showEmpty"  [tableColum]="tableColumns" [userData]="EmployeeBenefit" [loading]="loading"
     (pageChange)="loadNewPage($event)" [actions]="tableActions"
     (actionClick)="tableActionClicked($event)"></ngx-tablecomponent> -->
@@ -188,10 +189,10 @@
         </div>
         <div>
           <img src="https://homepages.cae.wisc.edu/~ece533/images/arctichare.png" style="width: 50px; height: auto;">
-         
+
           <span>{{ benefitSingle?.vendorName}}</span>
         </div>
-       
+
         <p style="font: normal normal normal 16px/22px Rubik; color: #080730;">{{ benefitSingle?. vendorPlanName}}</p>
         <div style="display: flex; font: normal normal normal 16px/22px Rubik; color: #080730; padding-bottom: 1rem;">
           <span>Employee Only</span>
@@ -229,21 +230,41 @@
   </div>
 </div>
 
-<ngx-side-modal>
+<ngx-side-modal [(show)]="showBenenfit" style="width: 500px;">
   <div modal-header>Add Benefit</div>
   <div modal-body>
-    <div class="form-group">
-      <label>Select Benefit Type</label>
-      <input class="form-control" />
+
+    <div class="form-group ">
+      <label for="inputEmail1" class="label   col-form-label listsubheader">Benefit</label>
+      <!-- <div class="">
+           <select placeholder="Select Gender" class="form-control" name="benefitTypeId" id="benefitTypeId"
+              #benefitTypeId="ngModel" [(ngModel)]="AddVendorPlan.benefitTypeId">
+              <option value="">--Select Benefit Type---</option>
+              <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option>
+          </select>
+
+          <div *ngIf="benefitTypeId.invalid && (benefitTypeId.dirty || benefitTypeId.touched)"
+              class="error">
+              <div *ngIf="benefitTypeId.errors.required">benefitType is required</div>
+          </div> 
+      </div> -->
     </div>
+
     <div class="form-group">
       <label>Add Description</label>
       <textarea class="form-control"></textarea>
     </div>
   </div>
-  <div modal-actions>
-    <button nbButton status='primary'>Submit</button>
-    <button nbButton outline style="background: transparent;" status='primary'>Cancel</button>
+  <div modal-actions class="d-flex" style="margin-top: 2px; margin-bottom: 3px;">
+    <button *ngIf="submitbtnPressed" nbButton status="primary" class="d-flex column"><i
+        class="fa fa-spin fa-spinner"></i>&nbsp;Processing ...</button>
+    <button *ngIf="!submitbtnPressed" nbButton status="primary" class="d-flex column" [disabled]="!disable"
+      (click)="SubmitEvent()">Submit</button>
+
+    <div style="padding-left: 15px;">
+      <button nbButton outline status="primary" (click)="showEvent = false" class="d-flex column"
+        style="background-color: white;">Discard</button>
+    </div>
   </div>
 </ngx-side-modal>
 
